fixing font clipping on safari for joiner.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -115,6 +115,8 @@ h5 {
   font-family: $base-font-italic;
   opacity: .6;
   font-style: italic;
+  padding-left: 5px;
+  margin-left: -5px;
 }
 
 // h5 {
